Enhance UI and prepare editor